fix contrast issues RULA#802

--- a/css/less/scaffolding.less
+++ b/css/less/scaffolding.less
@@ -747,13 +747,13 @@ div#content > table.table {
 
   // Section title
   h2 {
-    font-size: @baseFontSize * 1.10;
-    line-height: 38px;
-    color: @orange;
+    font-size: @baseFontSize * 1.071428571428571;
+    line-height: 35px;
+    color: #333333;
     border-top: 1px solid @borderLineColor;
     border-bottom: 1px solid @borderLineColor;
     margin: 0;
-    padding: 0 10px;
+    padding: 0 15px;
   }
 
   // Title with link
